# barlow-twins-mnist

./: .gitignore  README.md  pyproject.toml
src/btm/: augmentations.py  losses.py  models.py  train.py
